<resources>
    <string name="app_name">IoT</string>
    <string name="bienvenido_a_nuestra_aplicaci_n">Bienvenido a nuestra aplicación</string>
    <string name="button">Button</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="crear_contrase_a">Crear_Contraseña</string>
    <string name="email_2">Email_2</string>
    <string name="login">Login</string>
    <string name="iniciar_sesión" />
    <string name="logearse">logearse</string>
    <string name="loginLogin" />
    <string name="registrarse">Registrarse</string>
    <string name="registrarse1">Registrarse</string>
    <string name="registrarse2">Registrarse</string>
    <string name="email1">Email</string>
    <string name="abierto">Abierto</string>
    <string name="estado_del_port_n">Estado del portón</string>
    <string name="log_out">Log Out</string>
    <string name="port_n_inteligente">Portón inteligente</string>
    <string name="historial">Historial</string>
    <string name="estado">Estado</string>
</resources>