<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista_5"
    android:background="@drawable/fondo">

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#3F3F3F"
        android:text="@string/log_out"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="35dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/port_n_inteligente"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="184dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_historial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#3F3F3F"
        android:text="@string/historial"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="341dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_estado"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#3F3F3F"
        android:text="@string/estado"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="460dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>